solved: uneven UI across multiple browsers, due to css gap property

--- a/src/app/slide-sections/slide-sections.component.scss
+++ b/src/app/slide-sections/slide-sections.component.scss
@@ -1,10 +1,7 @@
 .pdf-container{
     position: relative;
-    border: 1px solid;
     padding: 0.5rem;
     width: 100%;
-    max-height: 500px;
-    overflow: hidden;
 }
 
 .page-count-info{
@@ -38,7 +35,6 @@
 .sections{
     display: flex;
     flex-direction: column;
-    gap: 16px;
     li{
         display: flex;
         flex-direction: row;
@@ -48,7 +44,6 @@
         .section-controls{
             display: flex;
             flex-direction: row;
-            gap: 16px;
             .links{
                 color: rgb(128, 128, 128);
 
