--- a/src/app/video-timeline/video-timeline.component.scss
+++ b/src/app/video-timeline/video-timeline.component.scss
@@ -1,7 +1,3 @@
-.columns{
-    gap: 20px;
-}
-
 .video-container{
     padding: 0px;
     background: black;
@@ -17,9 +13,10 @@
     background-repeat: no-repeat;
 
     pdf-viewer{
-        display: block;
         max-width: 350px;
-        height: 200px;
+        max-height: 250px;
+        margin: 0;
+        padding: 0;
     }
 }
 
@@ -27,13 +24,12 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    gap: 16px;
+    align-items: center !important;
+
     .player-controls{
         display: flex;
         flex-direction: column;
-        gap: 16px;
-        min-width: 100px;
+        min-width: 150px;
 
         a{
             color: rgb(0,0,0);
@@ -54,15 +50,15 @@
             -webkit-appearance: none;
             appearance: none;
             width: 2px;
-            height: inherit;
-            background: white;
+            height: 100px;
+            background: rgb(0, 0, 0);
             cursor: pointer;
         }
 
         &::-moz-range-thumb{
             width: 2px;
-            height: inherit;
-            background:white;
+            height: 100px;
+            background:rgb(0, 0, 0);
             cursor: pointer;
         }
     }
@@ -87,7 +83,6 @@
     max-width: 500px;
     display: flex;
     flex-direction: row;
-    gap: 16px;
     align-items: center;
     justify-content: space-between;
     margin-top: 0.5rem;
@@ -112,7 +107,6 @@
 
         .player-controls{
             flex-direction: row;
-            gap: 16px;
         }
     }
 }
