--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/@fortawesome/fontawesome-free/css/all.css';
+*{
+    margin:0;
+    padding: 0;
+}
 
-.pdf-viewer{
-    position: relative;
+.gap-flex-row{
+    & > * {
+        margin-left: 16px;
+        &:first-child{
+            margin-left: 0px;
+        }
+    }
+}
+
+.gap-flex-column{
+    & > * {
+        margin-bottom: 16px;
+        &:last-child{
+            margin-bottom: 0px;
+        }
+    }
+}
+
+@media only screen and (max-width: 763px){
+    .gap-flex-row.collapse{
+        & > * {
+            margin-left: 0px;
+            margin-bottom: 16px !important;
+
+            &:last-child{
+                margin-bottom: 0px;
+            }
+        }
+    }
+
+    .gap-flex-column.collapse{
+        & > * {
+            margin-bottom: 0px;
+            margin-left: 16px;
+    
+            &:first-child{
+                margin-left: 0px;
+            }
+        }
+    }
 }
